--- a/Lab1_Kotlin_xml/app/src/main/AndroidManifest.xml
+++ b/Lab1_Kotlin_xml/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,14 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TDDC73Lab1"
+        android:theme="@style/Theme.Lab1_kotlin_compose"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Lab1_kotlin_compose"
             android:windowSoftInputMode="adjustResize">
-             >
-
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
