--- a/Lab1_Kotlin_xml/app/src/main/AndroidManifest.xml
+++ b/Lab1_Kotlin_xml/app/src/main/AndroidManifest.xml
@@ -10,13 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab1_kotlin_compose"
+        android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Lab1_kotlin_compose"
+            android:theme="@style/Theme.AppCompat"
             android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
